<resources>
    <string name="app_name">Plantera</string>
    <string name="plantera">PLANTERA</string>
    <string name="version_0_0_1_beta">version 0.0.1 beta</string>
    <string name="plantera_logo">Plantera Logo</string>
    <string name="welcome_to_nplantera">WELCOME TO \nPLANTERA</string>
    <string name="plantera_is_a_startup_engaged_in_plant_cultivation_be_it_vegetables_fruit_medicinal_plants_or_ornamental_plants_our_collection_consists_of_various_types_of_plants_which_of_course_have_the_best_quality_at_very_friendly_prices">Plantera is a startup engaged in plant cultivation, be it vegetables, fruit, medicinal plants, or ornamental plants. Our collection consists of various types of plants which of course have the best quality at very friendly prices</string>
    <string name="get_started">Get Started</string>
    <string name="intro_logo">Intro Logo</string>
    <string name="the_carrot_daucus_carota_subsp">The carrot (Daucus carota subsp. ..</string>
    <string name="paprica">Paprica</string>
    <string name="product_image">Product Image</string>
    <string name="helo">Helo,</string>
    <string name="it_is_time_to_gardening">It is time to Gardening</string>
    <string name="share">Share</string>
    <string name="about_us">About Us</string>
    <string name="exit_app">Exit App</string>
</resources>